[package]
name = "h1emu-core"
version = "1.0.2"
edition = "2021"
description = "Utility library used in h1emu."
license = "BSD-3-Clause"
repository = "https://github.com/H1emu/H1emu-core"
readme="README.md"


[features]
default = ["full"]
game-utils = ["rand","getrandom"]
soeprotocol = ["crc","serde","serde_json","byteorder","protocols"]
gatewayprotocol =  ["serde","serde_json","byteorder","protocols"]
protocols=  ["serde","serde_json","byteorder"]
crc = ["byteorder"]
rc4 = []
jenkins = []
full = ["game-utils","soeprotocol","gatewayprotocol","protocols","jenkins","rc4","crc"]


[dependencies]
wasm-bindgen = { version = "0.2.83" }
getrandom = { version = "0.2.8", features = ["js"], optional = true }
rand = { version = "0.8.5", optional = true }
byteorder = { version = "1.4.3", optional = true } 
serde_json = {version = "1.0.91", optional = true}
serde = { version = "1.0.152", features = ["derive"], optional = true }
gloo-utils = "0.1.6"



[dev-dependencies]
criterion ={ version = "0.4.0"}

[[bench]]
name = "lib-bench"
harness = false

[lib]
name = "h1emu_core"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[profile.release]
lto = true
strip = true
opt-level = 3

[package.metadata.wasm-pack.profile.release]
# `wasm-opt`. For example `['-Os']` would optimize for size while `['-O4']`
wasm-opt = ['-O4']

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = false
